# duga-backend

./: .gitignore  .pre-commit-config.yaml  .smoke_docker_push.txt  .smoke_push.txt  AGENTS.md  AGENT_WAS_HERE.md  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  run.sh
.github/workflows/: issue_to_pr.yaml  pr_ci.yaml  pr_ci_and_review.yaml  pr_fix_on_label.yaml  pr_review.yaml
docker/: Dockerfile  docker-compose.yaml
migrations/: env.py
migrations/versions/: 2025_04_06_2142-1c6e103108a0_initial.py  2025_04_10_2232-696d7c983d0e_initial.py  2025_04_19_2359-41a4eccae865_wip.py  2025_05_26_0128-7fb9b06446ef_swipes.py
scripts/: enrich_location.py  prompt.txt
src/: main.py
src/api/: deps.py
src/api/v1/: __init__.py  api.py  errors.py
src/api/v1/endpoints/: auth.py  location.py  locations.py  swipe.py  user.py  users.py  web.py
src/core/: config.py  database.py  exceptions.py  types.py
src/models/: __init__.py  base.py  location.py  route.py  swipe.py  user.py
src/repositories/: location.py  swipe.py  user.py
src/schemas/: auth.py  location.py  swipe.py  user.py
src/services/: auth.py  file_storage.py  location.py  s3.py  swipe.py  user.py  users.py
src/static/css/: forms.css  tags.css
src/static/js/: tags-manager.js
src/templates/: location_edit.html  location_form.html  locations_list.html
tests/: conftest.py  test_logging.py
tests/repositories/: test_location_repository.py  test_swipe_repository.py  test_user_repository.py
tests/services/: test_auth_service.py  test_file_storage.py  test_location_service.py  test_swipe_service.py  test_user_service.py
